force-app/main/default/objects/OpportunityLineItem/fields/Customer_ref__c.field-meta.xml
<CustomField>
    <fullName>Customer_ref__c</fullName>
    <label>Customer reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>