force-app/main/default/objects/OpportunityLineItem/fields/OM_VID_ProductoGanador__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_ProductoGanador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Producto Ganador</label>
    <type>Checkbox</type>
</CustomField>