force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Design_Weight_in_Tons__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Design_Weight_in_Tons__c</fullName>
    <description>Field is used for a Rollup Summary on Opportunity page layout. It is a number field populated from a workflow rule to enable the Rollup Summary to work (as the Tonnage field is a formula and can&apos;t be referenced by the Rollup Summary)</description>
    <inlineHelpText>Total tonnage of the Opportunity based on the Design weight</inlineHelpText>
    <label>Opportunity Design Weight in Tons</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>