force-app/main/default/objects/OpportunityLineItem/fields/Pallet_Volume__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Volume__c</fullName>
    <label>Pallet Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>