force-app/main/default/objects/OpportunityLineItem/fields/Price_Includes_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Price_Includes_Delivery__c</fullName>
    <description>Define whether the price being offered includes delivery, and if not which ex-works location the price refers to the description above is legacy this field was repurposed by Fifty there is a automation linked to it.</description>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DAP</fullName>
                <default>true</default>
                <label>DAP</label>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>EX WORKS</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>CIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>