force-app/main/default/objects/OpportunityLineItem/fields/Price_Includes_Mould_Cost_Amortisation__c.field-meta.xml
<CustomField>
    <fullName>Price_Includes_Mould_Cost_Amortisation__c</fullName>
    <description>Does the price being offered include the amortisation of the mould costs</description>
    <inlineHelpText>Does the price being offered include the amortisation of the mould costs</inlineHelpText>
    <label>Price Includes Mould Cost Amortisation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>