force-app/main/default/objects/OpportunityLineItem/fields/Volume_000_s__c.field-meta.xml
<CustomField>
    <fullName>Volume_000_s__c</fullName>
    <description>Please enter total number of units in thousands</description>
    <inlineHelpText>Please enter total number of units in thousands</inlineHelpText>
    <label>Volume (000&apos;s)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>