force-app/main/default/objects/OpportunityLineItem/fields/Volume_total_units__c.field-meta.xml
<CustomField>
    <fullName>Volume_total_units__c</fullName>
    <formula>Volume_000_s__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume (total units)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>